Header issue found of extra spacing in heading

--- a/themes/zipdemons-project-theme/assets/css/custom.css
+++ b/themes/zipdemons-project-theme/assets/css/custom.css
@@ -113,7 +113,7 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
     align-content: space-between;
   }
   h1{
-    margin-top: 120px !important;
+    margin-top: 20px !important;
   }
 
   .has-red-color{
